@@ -21,7 +21,7 @@ Build-Depends: debhelper (>= 9),
                python3-setuptools,
                python3-voluptuous,
                python3-yaml,
-               snapd (>= 2.0.11~ppa0),
+               snapd (>= 2.38~),
                tox,
 Standards-Version: 3.9.8
 Homepage: http://launchpad.net/ubuntu-image
@@ -51,7 +51,7 @@ Depends: ca-certificates,
          python3-setuptools,
          python3-voluptuous,
          python3-yaml,
-         snapd,
+         snapd (>= 2.38~),
          ${misc:Depends},
          ${python3:Depends},
 Suggests: qemu-user-static,
